fixes landing slider on mobile

--- a/source/stylesheets/_index.scss
+++ b/source/stylesheets/_index.scss
@@ -522,6 +522,11 @@
       font-family: 'Open Sans', sans-serif;
       color: #fff;
       font-weight: 100;
+
+      @include phone {
+        width: 35%;
+        margin: 0 auto;
+      }
     }
 
     &-client {
@@ -530,6 +535,11 @@
       letter-spacing: 4px;
       color: #fff;
       margin: 30px 0px;
+
+      @include phone {
+        width: 35%;
+        margin: 0 auto;
+      }
     }
 
     &-num {
@@ -538,14 +548,19 @@
     }
 
     &-link {
-        text-decoration: none;
-        display: inline-block;
-        vertical-align: middle;
-        padding: 20px 0px;
-        position: relative;
-        transition: all 0.3s ease;
-        cursor: pointer;
-        color: #fff;
+      text-decoration: none;
+      display: inline-block;
+      vertical-align: middle;
+      padding: 20px 0px;
+      position: relative;
+      transition: all 0.3s ease;
+      cursor: pointer;
+      color: #fff;
+
+      @include phone {
+        text-align: center;
+        display: block;
+      }
 
       &:visited {
         color: #fff;
